--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,25 +1,81 @@
-/**
-  |============================
-  | include css partials with
-  | default @import url()
-  |============================
-*/
-@import url('./reset.css');
-@import url('./vite-promo.css');
-@import url('./header.css');
+.search-section {
+  display: flex;
+  justify-content: center;
+  margin-top: 50px;
+}
 
-:root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
+.form-control {
+  width: 272px;
+  height: 40px;
+  border-radius: 4px;
+  border: solid 1px #808080;
+  margin-right: 8px;
+  padding: 8px 0px 8px 16px;
+}
 
-  color: #242424;
-  background-color: rgba(255, 255, 255, 0.87);
+.btn {
+  width: 91px;
+  height: 55px;
+  border-radius: 8px;
+  padding: 8px 16px 8px 16px;
+  background-color: #4e75ff;
+  color: #ffffff;
+  border: none;
+}
 
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+.loader {
+  width: 48px;
+  height: 48px;
+  display: inline-block;
+  position: relative;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.hidden {
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+}
+
+.loader::after,
+.loader::before {
+  content: '';
+  width: 48px;
+  height: 48px;
+  border: 2px solid #000000;
+  position: absolute;
+  left: 0;
+  top: 0;
+  box-sizing: border-box;
+  animation: rotation 2s ease-in-out infinite;
+}
+.loader::after {
+  border-color: #ff3d00;
+  animation-delay: 1s;
+}
+
+@keyframes rotation {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
+}
+
+.gallery {
+  display: flex;
+  justify-content: center;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+
+.image-info {
+  display: flex;
+  gap: 20px;
+  font-size: 20px;
+  font-style: italic;
 }
