--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -79,3 +79,19 @@
   font-size: 20px;
   font-style: italic;
 }
+
+.more {
+  display: block;
+  margin: 20px auto;
+  font-size: 16px;
+  cursor: pointer;
+  height: 55px;
+  border-radius: 8px;
+  background-color: #4e75ff;
+  color: #ffffff;
+  border: none;
+}
+
+.image-card {
+  width: 650px;
+}
